--- a/package.json
+++ b/package.json
@@ -15,27 +15,14 @@
     "@discordjs/builders": "^0.15.0",
     "@discordjs/rest": "^0.5.0",
     "@discordjs/voice": "^0.10.0",
-    "axios": "^0.23.0",
-    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "discord-api-types": "^0.35.0",
     "discord.js": "^13.8.1",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "express-session": "^1.17.3",
-    "handlebars": "^4.7.7",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1",
-    "morgan": "~1.9.1",
     "obs-websocket-js": "^5.0.0-beta.2",
-    "otp-generator": "^3.0.0",
-    "passport": "^0.6.0",
-    "passport-oauth": "^1.0.0",
     "request": "^2.88.2",
-    "say": "^0.16.0",
-    "uniqid": "^5.4.0"
+    "say": "^0.16.0"
   },
   "engines": {
     "node": "16.15.1"
