--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "discord.js": "^13.8.1",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
-    "obs-websocket-js": "^5.0.0-beta.2",
+    "obs-websocket-js": "4.0.3",
     "request": "^2.88.2",
     "say": "^0.16.0"
   },
