--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
+    "discord": "node discordApp.js",
+    "obs": "node obsApp.js",
     "ngrok": "ngrok http 80"
   },
   "repository": "git@github.com:jcampbellg/stream_manager_obs.git",
