--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@discordjs/builders": "^0.15.0",
     "@discordjs/rest": "^0.5.0",
     "@discordjs/voice": "^0.10.0",
+    "better-node-gtts": "^1.0.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "discord.js": "^13.8.1",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "node-gtts": "^2.0.2",
+    "nodtts": "^1.0.1",
     "obs-websocket-js": "4.0.3",
     "request": "^2.88.2",
     "say": "^0.16.0"
